--- a/react-frontend/src/places/components/PlaceItem.css
+++ b/react-frontend/src/places/components/PlaceItem.css
@@ -6,6 +6,14 @@
   padding: 0;
 }
 
+.green-text {
+  color: green;
+}
+
+.red-text {
+  color: red;
+}
+
 .place-item__info {
   padding: 1rem;
   text-align: center;
