--- a/react-frontend/src/places/components/TabbedItem.css
+++ b/react-frontend/src/places/components/TabbedItem.css
@@ -1,39 +1,52 @@
 /* TabbedItem.css */
 .tabbed-item-container {
-    margin: 1rem 0;
-  }
+  margin: 1rem auto; /* Center-align the tabbed item and add margin */
+  max-width: 45rem; /* Set maximum width */
+}
+
+.tabbed-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+
+
+.tabbed-item-left {
+  display: flex;
+  align-items: center;
+}
+
+.tabbed-item-image {
+  width: 50px; /* Adjust the image width as needed */
+  height: 50px; /* Adjust the image height as needed */
+  object-fit: cover;
+  margin-right: 1rem;
+}
+
+.tabbed-item h3 {
+  margin: 0;
+}
+
+/* TabbedItem.css */
+.tabbed-item-title {
+  margin-left:  15rem;
+  text-align: center; /* Center-align the title */
+
+}
+
+
+@media (max-width: 768px) {
   
-  .tabbed-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .tabbed-item-left {
-    display: flex;
-    align-items: center;
-  }
-  
-  .tabbed-item-image {
-    width: 50px; /* Adjust the image width as needed */
-    height: 50px; /* Adjust the image height as needed */
-    object-fit: cover;
-    margin-right: 1rem;
-  }
-  
-  .tabbed-item h3 {
+
+  .tabbed-item-title {
     margin: 0;
+    
+  
   }
-  
-  
-  
-  @media (min-width: 768px) {
-    .tabbed-item-image {
-      width: 75px; /* Adjust the image width for larger screens */
-      height: 75px; /* Adjust the image height for larger screens */
-    }
-  }
-  
+}
+
+
