--- a/react-frontend/src/user/components/AdminDashboard.css
+++ b/react-frontend/src/user/components/AdminDashboard.css
@@ -19,9 +19,23 @@
   margin-left: 20rem;
 }
 
+.nouser-dashboard {
+  display: flex;
+  align-items: center;
+  height: 80vh;
+  background-color: #4d4d4d;
+  color: #fdb601;
+  
+}
+
 .dashboard-title {
   font-size: 3rem;
   margin-right: 3rem;
+  
+}
+
+.dashboard-title-nouser {
+  font-size: 3rem;
   
 }
 
