added image upload
added disabled for Button Link,
tried fixing the bug where the user can edit an item that expired for a second

--- a/react-frontend/src/places/components/PlaceItem.css
+++ b/react-frontend/src/places/components/PlaceItem.css
@@ -66,3 +66,12 @@
     height: 20rem;
   }
 }
+
+
+/* CSS for testing the edit btton disable */
+a.disabled {
+  pointer-events: none; /* Prevents the link from being clickable */
+  color: #999; /* Change text color to indicate the disabled state */
+  text-decoration: none; /* Remove underline, if any */
+  cursor: not-allowed; /* Show disabled cursor */
+}
