--- a/react-frontend/src/places/components/PlaceList.css
+++ b/react-frontend/src/places/components/PlaceList.css
@@ -58,4 +58,19 @@
   box-shadow: 0 0 4px rgba(0, 123, 255, 0.5); /* Add a subtle box shadow on focus */
 }
 
-  
+/* styles.css (or any other file name with .css extension) */
+.containerRight {
+  position: relative;
+  /* Add other styling properties for your container here */
+}
+
+.deactButton {
+  position: absolute;
+  top: -50px; /* Adjust the top position as needed */
+  right: 10px; /* Adjust the right position as needed */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  /* Add other styling properties for your button here */
+}
