--- a/react-frontend/src/shared/components/Navigation/MainNavigation.css
+++ b/react-frontend/src/shared/components/Navigation/MainNavigation.css
@@ -43,3 +43,31 @@
       display: block;
     }
   }
+
+  .message-container {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    max-width: 300px;
+    z-index: 9999;
+  }
+   /* notification */
+  .message {
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    color: #333333;
+    word-wrap: break-word;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .message:hover {
+    transform: scale(1.05);
+  }
+  
+ 
+  
