--- a/react-frontend/src/welcomepage/components/NewArrivals.css
+++ b/react-frontend/src/welcomepage/components/NewArrivals.css
@@ -1,5 +1,10 @@
 /* NewArrivals.css */
 
+.featured-products{
+  width: 150vh;
+ 
+}
+
 .newarrivals-list {
     display: flex;
     overflow-x: auto;
@@ -18,11 +23,27 @@
     background-color: #f5f5f5;
   }
   
-  .newarrivals-item img {
+  .product-list {
+    display: flex;
+    overflow-x: auto;
+    gap: 16px;
+    display: flex;
+    justify-content:space-between;
+  }
+  
+  .product-item {
+    width: 200px;
+    height: 300px; /* Set a fixed height for all product items */
+    border: 1px solid #ccc;
+    padding: 16px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .product-item img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
-  }
-  
-  /* Add more styles or modify as needed */
-  
+  } 
