--- a/react-frontend/src/welcomepage/components/PageCategories.css
+++ b/react-frontend/src/welcomepage/components/PageCategories.css
@@ -1,60 +1,43 @@
 /* PageCategories.css */
 
-.upper-centered-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  height: 100vh;
-  padding-top: 20px;
-}
-
-.pcategory-list {
+.pcategory-navigation {
   display: flex;
   overflow-x: auto;
   gap: 16px;
-  border: 5px solid #333; /* Border around all items */
-  padding: 10px; /* Padding inside the border */
-  width: 100%; /* Set a fixed width for the container */
-  overflow-x: auto; /* Enable horizontal scrolling */
-  white-space: nowrap; /* Prevent items from wrapping to the next line */
+}
+
+.pcategory-links {
+  width: 200px;
 }
 
 .pcategory-item-wrapper {
-  width: 200px;
+  width: 100%;
   height: 250px;
 }
 
 .pcategory-item {
   width: 100%;
   height: 100%;
-  padding: 16px;
   text-align: center;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center; /* Center content vertically */
-  background-color: #444; /* Darker background color */
 }
 
 .pcategory-item img {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
-  margin-bottom: 10px; /* Adjust the spacing between image and text */
+  border-radius: 50%; /* Round the image corners */
+  border: 2px solid #333; /* Darker border for visibility */
+  margin-bottom: 10px; /* Add margin between image and text */
 }
 
 .pcategory-item p {
-  color: #fff;
-  margin: 0; /* Reset the default margin */
+  color: #333;
 }
 
-/* PageCategories.css */
-.pcategory-item p.link-text {
-  font-size: 1.2rem;
-  color: #ffeb3b;
-  text-decoration: none !important;
-}
 a {
   text-decoration: none;
 }
