--- a/react-frontend/src/welcomepage/pages/WelcomePage.css
+++ b/react-frontend/src/welcomepage/pages/WelcomePage.css
@@ -1,49 +1,68 @@
-/* WelcomePage.css */
 
-.page-layout {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    height: 100vh;
-    padding: 20px;
-  }
-  
-  .category-row,
-  .newarrivals-row,
-  .other-components-row {
-    display: flex;
-    flex-direction: column; /* Change from row to column */
-    align-items: center;
-    overflow-x: auto;
-    gap: 16px;
-    margin-top: 20px;
-  }
-  
-  .newarrivals-row {
-    height: auto; /* Set to 'auto' to take as much height as needed */
-  }
-  
-  .category-item,
-  .newarrivals-item,
-  .other-components-item {
-    width: 200px;
-    height: 250px;
-    border: 1px solid #ccc;
-    padding: 16px;
-    text-align: center;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .category-item img,
-  .newarrivals-item img,
-  .other-components-item img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-  }
-  
   /* Add more styles or modify as needed */
+  /***********************/
+
+  .testia {
+    font-family: 'Arial', sans-serif;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%; /* Set width to 90% */
+    margin: 0 auto; /* Center the container horizontally */
   
+  }
+
+
+  /*******************/
+
+  .banner {
+    display: flex;
+    flex-direction: column;
+    max-width: 960px; /* Adjust the max-width as needed */
+    margin: 0 auto;
+  }
+  
+  .banner a {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .banner-image {
+    height: 250px; /* Adjust the height as needed */
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .banner-content {
+    background-color: #9ef4a6;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .banner-content h2 {
+    color: #07522c;
+    margin-bottom: 10px;
+  }
+  
+  .banner-content p {
+    color: #07522c;
+    margin-bottom: 20px;
+  }
+  
+  .banner-content button {
+    background-color: #07522c;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .banner-content button:hover {
+    background-color: #063e1a;
+  }
+  
+  
+
