--- a/react-frontend/src/welcomepage/components/WelcomeCard.css
+++ b/react-frontend/src/welcomepage/components/WelcomeCard.css
@@ -42,11 +42,11 @@
   }
   
   .w3-green {
-    background-color: #6bff6b; /* Adjust color as needed */
+    background-color: #95f995; /* Adjust color as needed */
   }
   
   .w3-dark-green {
-    background-color: #0bfb0b; /* Adjust color as needed */
+    background-color: #87f96d; /* Adjust color as needed */
   }
   
   .w3-black {
