--- a/react-frontend/src/welcomepage/components/NewArrivals.css
+++ b/react-frontend/src/welcomepage/components/NewArrivals.css
@@ -34,7 +34,6 @@
   .product-item {
     width: 200px;
     height: 300px; /* Set a fixed height for all product items */
-    border: 1px solid #ccc;
     padding: 16px;
     text-align: center;
     cursor: pointer;
@@ -43,7 +42,16 @@
   }
   
   .product-item img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 25vh;
+    height: 23.5vh;
     object-fit: cover;
+    border: 2px solid #333; /* Add border styling as needed */
+    border-radius: 10px; /* Increase border-radius for smoother corners */
+
   } 
+
+  a {
+    text-decoration: none;
+    color: #333;
+  }
+  
