added more notification and starting popularBids

--- a/react-frontend/src/welcomepage/pages/ItemsCategory.css
+++ b/react-frontend/src/welcomepage/pages/ItemsCategory.css
@@ -20,8 +20,8 @@
   }
   
   .ICcard img {
-    width: 61.4vh;
-    height: 250px;
+    width: 62vh;
+    height: 35vh;
     object-fit: cover;
   }
   
