finished? popular bids, checking Activ/Deact button
popular bids works fine , maybe a touch up in the looks department ,
fixd deactivate/activate button also known as ChangePageButton for the Admin , still dont what to do with the users problalby remove it , or make so that they see only there item and cant activate items the admin deactivated

--- a/react-frontend/src/shared/components/Navigation/MainNavigation.css
+++ b/react-frontend/src/shared/components/Navigation/MainNavigation.css
@@ -52,6 +52,19 @@
     z-index: 9999;
   }*/
    /* notification */
+
+.NotifButton{
+  background-color: rgb(190, 48, 218); /* Green background color */
+  color: white; /* White text color */
+  padding: 14px 19px; /* Padding */
+  border: none; /* No border */
+  border-radius: 4px; /* Rounded corners */
+  cursor: pointer; /* Cursor on hover */
+  padding-bottom: 10px;
+  margin-bottom: 8px;
+}
+
+   
   .message-notification {
     background-color: #ffffff;
     border: 1px solid #cccccc;
