--- a/react-frontend/src/welcomepage/components/WelcomeCard.css
+++ b/react-frontend/src/welcomepage/components/WelcomeCard.css
@@ -38,15 +38,15 @@
   
   /* Custom styles for different sections */
   .w3-light-green {
-    background-color: #aaffaa; /* Adjust color as needed */
+    background-color: #e5d1e1; /* Adjust color as needed */
   }
   
   .w3-green {
-    background-color: #95f995; /* Adjust color as needed */
+    background-color: #e39bd6; /* Adjust color as needed */
   }
   
   .w3-dark-green {
-    background-color: #87f96d; /* Adjust color as needed */
+    background-color: #88597f; /* Adjust color as needed */
   }
   
   .w3-black {
