--- a/react-frontend/src/welcomepage/pages/WelcomePage.css
+++ b/react-frontend/src/welcomepage/pages/WelcomePage.css
@@ -30,7 +30,7 @@
   }
   
   .banner-content {
-    background-color: #9ef4a6;
+    background-color: #9ebcf4;
     padding: 30px;
     text-align: center;
   }
@@ -55,7 +55,7 @@
   }
   
   .banner-content button:hover {
-    background-color: #063e1a;
+    background-color: #1c482c;
   }
   
   
