--- a/react-frontend/src/welcomepage/components/SlideShow.css
+++ b/react-frontend/src/welcomepage/components/SlideShow.css
@@ -5,7 +5,7 @@
   width: 150vh;
   height: 30vh;
   margin: auto;
-  background-color: #a59f9f;
+  background-color: rgb(68, 64, 82);
   padding: 20px;
 }
 
