--- a/react-frontend/src/welcomepage/components/SlideShow.css
+++ b/react-frontend/src/welcomepage/components/SlideShow.css
@@ -5,8 +5,13 @@
   width: 150vh;
   height: 30vh;
   margin: auto;
-  background-color: rgb(68, 64, 82);
-  padding: 20px;
+  background: repeating-linear-gradient(
+    45deg,
+    #f5f5f5,
+    #f5f5f5 10px,
+    #e0e0e0 10px,
+    #720c0c 20px
+  );  padding: 20px;
 }
 
 .mySlides {
@@ -25,7 +30,7 @@
   transform: translate(-50%, -50%);
   text-align: center;
   padding: 50px; /* Increased padding for the message container */
-  background-color: #ffffff;
+  background-color: #f5dddd;
   border-radius: 10px;
 }
 
