sockets exist and are very fun aaahhahahhgfghgsdagdsfagsfdiugfdsgsdfugfsdugifsdiuosadhviot 8v sidaghihagiohdfoiuagcho

--- a/react-frontend/src/welcomepage/pages/ItemsCategory.css
+++ b/react-frontend/src/welcomepage/pages/ItemsCategory.css
@@ -50,4 +50,10 @@
   }
   
  
+  .catPAgeTitle {
+    text-align: center;
+    border-bottom: 2px solid #ccc; /* You can change the color as needed */
+    padding-bottom: 10px; /* Adjust as needed */
+    font-size: 30px; /* Adjust as needed */
+  }
   
