--- a/react-frontend/src/adminOnly/components/TimeSeriesLineChart.css
+++ b/react-frontend/src/adminOnly/components/TimeSeriesLineChart.css
@@ -1,11 +1,11 @@
 /* TimeSeriesLineChart.css */
 
 .timeSeriesLineChartContainer {
-    width: 80%; /* Adjust the width as needed */
+    width: 90%; /* Adjust the width as needed */
     margin: auto;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+    background-color: #ffffff;
   }
   
   .lineChart {
