--- a/react-frontend/src/adminOnly/components/UserActivityBarChart.css
+++ b/react-frontend/src/adminOnly/components/UserActivityBarChart.css
@@ -13,3 +13,21 @@
     margin-top: 20px; /* Adjust as needed */
   }
   
+  
+  .pagination-controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+  .pagination-controls button {
+    padding: 5px 10px;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+  
+  .pagination-controls button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
