--- a/react-frontend/src/places/components/SoldItems.css
+++ b/react-frontend/src/places/components/SoldItems.css
@@ -8,7 +8,6 @@
 .sold-item {
   border: 1px solid #ccc;
   width: 250px; /* Adjust the width as needed */
-  height: 100vhpx; /* Set a fixed height for all items */
   margin: 16px;
   text-align: center;
   overflow: hidden; /* Hide content that exceeds the fixed height */
@@ -23,4 +22,13 @@
 
 .margbot{
   margin-bottom: 20px;
+}
+
+/* Add this style to your CSS file */
+.month-select {
+  padding: 8px; /* Adjust padding as needed */
+  font-size: 16px; /* Adjust font size as needed */
+  border: 1px solid #ccc; /* Add a border */
+  border-radius: 4px; /* Add border-radius for rounded corners */
+  cursor: pointer; /* Add pointer cursor for better user interaction */
 }
