--- a/react-frontend/src/places/components/SoldItems.css
+++ b/react-frontend/src/places/components/SoldItems.css
@@ -32,3 +32,12 @@
   border-radius: 4px; /* Add border-radius for rounded corners */
   cursor: pointer; /* Add pointer cursor for better user interaction */
 }
+
+.year-select {
+  margin-left: 10px;
+  padding: 8px; /* Adjust padding as needed */
+  font-size: 16px; /* Adjust font size as needed */
+  border: 1px solid #ccc; /* Add a border */
+  border-radius: 4px; /* Add border-radius for rounded corners */
+  cursor: pointer; /* Add pointer cursor for better user interaction */
+}
